--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@ async function* createAsyncIterable(syncIterable) {
                         <h2>Rest/spread properties</h2>
                         <p>Enables the rest operator (...) in:</p>
                         <ul>
-							<li>Object destructoring</li>
+							<li>Object destructuring</li>
 							<li>Object literals</li>
 						</ul>
 					</section>
 					<section>
-						<h2>Object destructoring</h2>
+						<h2>Object destructuring</h2>
 						<pre><code data-trim data-noescape>
 const obj = { foo: 1, bar: 2, baz: 3 };
 const { foo, ...rest } = obj;
